--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 :root {
@@ -24,7 +24,7 @@ body {
 
 h1,
 h2 {
-  font-size: 2.1875rem;
+  font-size: 3.1875rem;
   font-weight: 600;
   margin: 0;
   padding: 0;
@@ -42,6 +42,9 @@ a {
 
 input:focus {
   outline: none;
+}
+address {
+  all: unset;
 }
 
 .container {
@@ -73,7 +76,7 @@ input:focus {
 
 .top-header-link {
   font-weight: 400;
-  font-size: 0.75rem;
+  font-size: 1rem;
   color: var(--TextGray);
 }
 
@@ -84,7 +87,7 @@ input:focus {
 }
 
 .header-phone-link {
-  font-size: 0.75rem;
+  font-size: 1rem;
   color: var(--TextBold);
   font-weight: 500;
 }
@@ -106,6 +109,7 @@ input:focus {
   font-weight: 700;
   color: var(--TextBold);
   text-transform: uppercase;
+  cursor: pointer;
 }
 .catalog {
   border: none;
@@ -117,6 +121,7 @@ input:focus {
   background-color: var(--ColorMain);
   margin-right: -20px;
   position: relative;
+  cursor: pointer;
 }
 .catalog:before {
   content: "";
@@ -177,4 +182,106 @@ input:focus {
   font-weight: 500;
   color: var(--TextGray);
   padding: 0;
+  cursor: pointer;
+}
+
+/* START Section-legend */
+
+.section-legend {
+  background-image: url("../img/header-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  max-width: 86.25rem;
+  height: 33rem;
+  margin: 40px auto;
+  padding-bottom: 50px;
+  padding-top: 50px;
+  position: relative;
+  z-index: 2;
+}
+
+.section-legend::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgb(111, 115, 238);
+  background: linear-gradient(
+    90deg,
+    rgba(111, 115, 238, 1) 35%,
+    rgba(0, 212, 255, 0) 100%
+  );
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.hero-address {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--TextLight);
+  margin-bottom: 1.25rem;
+  margin-top: 20px;
+}
+
+.legend-work-hours {
+  font-size: 1rem;
+  color: var(--TextLight);
+  font-weight: 500;
+  opacity: 50%;
+}
+
+.legend-title {
+  font-size: 55px;
+  max-width: 45rem;
+  color: var(--TextLight);
+  margin-bottom: 0.4375rem;
+}
+
+.legend-text {
+  font-size: 1.25rem;
+  font-weight: 300;
+  color: var(--TextLight);
+  margin-bottom: 1.75rem;
+}
+
+.legend-strengths {
+  display: flex;
+  align-items: center;
+  gap: 2.1875rem;
+  margin-top: 20px;
+}
+
+.legend-strengths {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.legend-icon {
+  display: inline-block;
+  background-color: rgb(255, 255, 255, 0.2);
+  padding: 22px;
+  border-radius: 5px;
+}
+
+.strengths-text {
+  width: 150px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--TextLight);
+}
+
+.btn-caling {
+  border: none;
+  background-color: var(--TextLight);
+  color: var(--ColorMain);
+  font-size: 1rem;
+  padding: 1rem 4.5rem;
+  margin-top: 80px;
 }
