--- a/css/style.css
+++ b/css/style.css
@@ -395,3 +395,150 @@ address {
   width: 32.1875rem;
   border-radius: 0.625rem;
 }
+
+/* START SECTION PRODUCT  */
+
+.section-product {
+  margin-top: 6.25rem;
+}
+
+.title-product {
+  text-align: center;
+  color: rgb(40, 39, 57);
+  font-size: 35px;
+  font-weight: 600;
+  line-height: 51px;
+  letter-spacing: 0%;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 3.125rem;
+}
+
+.product-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-card {
+  max-width: 15.9375rem;
+  display: flex;
+  flex-direction: column;
+  border: 1.5px solid rgb(234, 235, 237);
+  border-radius: 10px;
+}
+
+.product-card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px 0 10px;
+  /* background: rgb(240, 241, 245); */
+  margin-bottom: -37px;
+  z-index: 5;
+}
+
+.hin {
+  color: var(--TextLight);
+  background-color: var(--CardHit);
+  padding: 4px 9px;
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 17px;
+  letter-spacing: 0%;
+}
+
+.new {
+  background: rgb(117, 209, 74);
+}
+
+.product-card-hero {
+  background: rgb(240, 241, 245);
+  border-radius: 10px 10px 0 0;
+}
+
+.product-card-title {
+  padding-left: 24px;
+  color: rgb(40, 39, 57);
+  font-size: 1.125rem;
+  font-weight: 600;
+  line-height: 1.625rem;
+  letter-spacing: 0%;
+}
+
+.product-attribute {
+  padding: 0 1.5625rem;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: rgb(93, 108, 123);
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0%;
+}
+
+.product-attribute-value {
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-attribute-value-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.product-price-wrapper {
+  margin-top: 1.625rem;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 0 25px;
+}
+
+.product-price {
+  display: flex;
+  flex-direction: column;
+}
+
+.old-price {
+  color: rgb(93, 108, 123);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 17px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-decoration-line: line-through;
+}
+
+.price-product {
+  color: rgb(40, 39, 57);
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 29px;
+  letter-spacing: 0%;
+}
+
+.product-like {
+  display: flex;
+  gap: 10px;
+}
+
+.btn-zapis {
+  margin: 0 auto;
+  width: 206px;
+  height: 38px;
+  border: none;
+  background-color: var(--ColorMain);
+  border-radius: 10px;
+  color: rgb(255, 255, 255);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 17px;
+  letter-spacing: 0%;
+  margin-bottom: 1.1875rem;
+}
